--- a/inference_grid.ipynb
+++ b/inference_grid.ipynb
@@ -83,12 +83,12 @@
     "# dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
     "# \taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
     "# \tborderBuffer = 2)\t\n",
-    "# exps = [123, 124, 125, 126, 127, 128, 129, 131, 1121, 1122]\n",
+    "# exps = [123, 124, 125, 126, 127, 128, 129, 131, 1121, 1122] # earlier date\n",
     "dates = [2019, 2020]\n",
     "dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
     "\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
     "\tborderBuffer = 2)\t\n",
-    "exps = [130, 132, 133, 134, 135, 136, 137, 1125, 1124, 1123]\n",
+    "exps = [130, 132, 133, 134, 135, 136, 137, 1125, 1124, 1123] # earlier date\n",
     "\n",
     "\n",
     "if issubclass(type(dataset), MultipleDates):\n",
@@ -24187,7 +24187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
