--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -274,6 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trainer.setExperimentPath()\n",
     "trainer.createLogFolders()"
    ]
   },
