Ok thesis proposal document. Before making code equal for ensemble

--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -207,7 +207,7 @@
     "\t\t# train 2017-2018\n",
     "\t\t# exp = 138\n",
     "\t\t# exp = 140\n",
-    "\t\texp = 147\n",
+    "\t\t# exp = 147\n",
     "\tif type(dataset) == MTDeforestationTime:\n",
     "\t\texp = 28\n",
     "\tif type(dataset) == MTMultipleDates:\n",
@@ -1933,7 +1933,7 @@
    ],
    "source": [
     "\n",
-    "# trainer.getUncertaintyAAValues()"
+    "trainer.getUncertaintyAAValues()"
    ]
   },
   {
@@ -2084,7 +2084,7 @@
     }
    ],
    "source": [
-    "# trainer.getUncertaintyAAAuditedValues()"
+    "trainer.getUncertaintyAAAuditedValues()"
    ]
   },
   {
@@ -2094,7 +2094,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trainer.setPlotLimsForUncertaintyAA()"
+    "trainer.setPlotLimsForUncertaintyAA()"
    ]
   },
   {
@@ -2110,7 +2110,7 @@
     "\n",
     "ylim = [0, 105]\n",
     "'''\n",
-    "# trainer.plotUncertaintyAA()"
+    "trainer.plotUncertaintyAA()"
    ]
   },
   {
@@ -2771,7 +2771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
