Ensemble train ok.

--- a/inference_grid_ensemble.ipynb
+++ b/inference_grid_ensemble.ipynb
@@ -31,7 +31,7 @@
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
     "\n",
-    "from src.trainer.mcdropout import TrainerEnsemble\n",
+    "from src.trainer.multioutput import TrainerEnsemble\n",
     "\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
