--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -39,7 +39,7 @@
     "# from src.dataset_legacy import MTDeforestationTime\n",
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates\n",
-    "from src.trainer.mcdropout import TrainerMCDropout"
+    "from src.trainer.multioutput import TrainerMCDropout"
    ]
   },
   {
