--- a/inference_grid.ipynb
+++ b/inference_grid.ipynb
@@ -31,7 +31,7 @@
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
     "\n",
-    "from src.trainer.mcdropout import TrainerMCDropout\n",
+    "from src.trainer.multioutput import TrainerMCDropout\n",
     "\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
@@ -24187,7 +24187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
