Relu evidence. Before uncertainty no threshold evidential

--- a/train_grid_search.ipynb
+++ b/train_grid_search.ipynb
@@ -39,7 +39,7 @@
     "from src import metrics as _metric\n",
     "import json\n",
     "import pickle \n",
-    "\n"
+    "import src.trainer.evidential as evidential\n"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "\n",
     "#exp_id_base = 148\n",
     "# exp_id_base = 155\n",
-    "exp_id_base = 191\n",
+    "exp_id_base = 175\n",
     "\n",
     "\n",
     "exp_ids = range(exp_id_base, exp_id_base+len(experiment_values))\n"
@@ -176,6 +176,18 @@
    ],
    "source": [
     "exp_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfa1145d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import Enum\n",
+    "UncertaintyMethod = Enum('Predictor', 'pred_var MI pred_entropy KL pred_entropy_single evidential')\n",
+    "uncertaintyMethod = \"evidential\"\n"
    ]
   },
   {
@@ -3334,13 +3346,17 @@
     "for experiment_value, exp_id in zip(experiment_values, exp_ids):\n",
     "    config = {\n",
     "        \"training\": True,\n",
+    "    \t\"learning_rate\": 1e-4,\n",
+    "        \"weights\": [0.1, 0.9, 0],\n",
     "        \"save_probabilities\": False,\n",
     "        \"loadInference\": False,\n",
     "        \"addPastDeforestationInput\": True,\n",
     "        \"inference_times\": 1,\n",
     "        \"Uncertainty\": {\n",
     "            \"annealing_step\": experiment_value# 10*375/2 # 1875\n",
-    "        }\n",
+    "        },\n",
+    "    \t\"uncertainty_method\": uncertaintyMethod,\n",
+    "        \"evidence_function\": evidential.relu_evidence\n",
     "    }\n",
     "\n",
     "    trainer = TrainerEvidential(config, dataset, patchesHandler)\n",
