UEO ok but error in ensemble F1 audit

--- a/polygon_analysis.ipynb
+++ b/polygon_analysis.ipynb
@@ -1114,7 +1114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ic| predicted_thresholded.shape: (44657480,)\n"
+      "ic| uncertainty_thresholded.shape: (44657480,)\n"
      ]
     },
     {
@@ -1132,10 +1132,10 @@
     "importlib.reload(_metrics)\n",
     "\n",
     "\n",
-    "predicted_thresholded = np.zeros_like(y_pred).astype(np.int8)\n",
-    "predicted_thresholded[y_pred >= threshold_uncertainty] = 1\n",
-    "predicted_thresholded = predicted_thresholded.astype(np.uint8)\n",
-    "ic(predicted_thresholded.shape)\n"
+    "uncertainty_thresholded = np.zeros_like(y_pred).astype(np.int8)\n",
+    "uncertainty_thresholded[y_pred >= threshold_uncertainty] = 1\n",
+    "uncertainty_thresholded = uncertainty_thresholded.astype(np.uint8)\n",
+    "ic(uncertainty_thresholded.shape)\n"
    ]
   },
   {
@@ -1147,7 +1147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ic| np.unique(predicted_thresholded, return_counts=True): (array([0, 1], dtype=uint8), array([43267728,  1389752], dtype=int64))\n",
+      "ic| np.unique(uncertainty_thresholded, return_counts=True): (array([0, 1], dtype=uint8), array([43267728,  1389752], dtype=int64))\n",
       "    np.unique(label_mask, return_counts=True): (array([0, 1, 2], dtype=uint8),\n",
       "                                                array([109996296,   2271496,  62736108], dtype=int64))\n",
       "    np.unique(mask_amazon_ts, return_counts=True): (array([0, 1], dtype=uint8), array([105002340,  70001560], dtype=int64))\n"
@@ -1168,7 +1168,7 @@
     }
    ],
    "source": [
-    "ic(np.unique(predicted_thresholded, return_counts=True),\n",
+    "ic(np.unique(uncertainty_thresholded, return_counts=True),\n",
     "    np.unique(label_mask, return_counts=True),\n",
     "    np.unique(mask_amazon_ts, return_counts=True))\n",
     "\n"
@@ -1183,7 +1183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ic| predicted_thresholded.shape: (44657480,)\n",
+      "ic| uncertainty_thresholded.shape: (44657480,)\n",
       "    label_mask.shape: (16795, 10420)\n",
       "    mask_amazon_ts.shape: (16795, 10420)\n",
       "    label_mask.flatten().shape: (175003900,)\n",
@@ -1214,8 +1214,8 @@
     "    percentage = np.count_nonzero(uncertainty_mask.flatten()) / len(total_test_area.flatten())\n",
     "    return total_test_area, percentage\n",
     "\n",
-    "ic(predicted_thresholded.shape, label_mask.shape, mask_amazon_ts.shape, label_mask.flatten().shape)\n",
-    "total_test_area, percentage = getUncertaintyPercentageFromTest(predicted_thresholded, \n",
+    "ic(uncertainty_thresholded.shape, label_mask.shape, mask_amazon_ts.shape, label_mask.flatten().shape)\n",
+    "total_test_area, percentage = getUncertaintyPercentageFromTest(uncertainty_thresholded, \n",
     "        label_mask, mask_amazon_ts)\n",
     "\n",
     "ic(percentage)"
