--- a/train_grid_search.ipynb
+++ b/train_grid_search.ipynb
@@ -63,8 +63,8 @@
    "source": [
     "\n",
     "config = {\n",
-    "\t\"training\": False,\n",
-    "\t\"learning_rate\": 1e-3,\n",
+    "\t\"training\": True,\n",
+    "\t\"learning_rate\": 1e-4,\n",
     "\t\"weights\": [0.1, 0.9, 0],\n",
     "\t\"save_probabilities\": False,\n",
     "\t\"loadInference\": False,\n",
