Evidential past date not so good. Before meolo and augmentations

--- a/train_grid_search.ipynb
+++ b/train_grid_search.ipynb
@@ -9744,14 +9744,14 @@
     "for experiment_value, exp_id in zip(experiment_values, exp_ids):\n",
     "    config = {\n",
     "        \"training\": True,\n",
-    "    \t\"learning_rate\": 1e-3,\n",
+    "    \t\"learning_rate\": 1e-4,\n",
     "        \"weights\": [0.1, 0.9, 0],\n",
     "        \"save_probabilities\": False,\n",
     "        \"loadInference\": False,\n",
     "        \"addPastDeforestationInput\": True,\n",
     "        \"inference_times\": 1,\n",
     "        \"Uncertainty\": {\n",
-    "            \"annealing_step\": experiment_value# 10*375/2 # 1875\n",
+    "            \"annealing_step\": 10*375/2 # 1875\n",
     "        },\n",
     "    \t\"uncertainty_method\": uncertaintyMethod,\n",
     "        \"evidence_function\": evidential.relu_evidence\n",
