--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -7,6 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1abb0a86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from utils_v1 import *\n"
    ]
   },
@@ -97,11 +108,11 @@
    "source": [
     "\n",
     "config = {\n",
-    "\t\"training\": False,\n",
+    "\t\"training\": True,\n",
     "\t\"save_probabilities\": False,\n",
     "\t\"loadInference\": False,\n",
     "\t\"addPastDeforestationInput\": True,\n",
-    "\t\"inference_times\": 10,\n",
+    "\t\"inference_times\": 1,\n",
     "\t\"removePolygons\": True,\n",
     "\t\"uncertainty_method\": uncertaintyMethod,\n",
     "\t\"learning_rate\": 1e-4\n",
@@ -241,7 +252,7 @@
     "else:\n",
     "\t# exp = 13 # Multiple dates. using fixed fixed past deforestation distance\n",
     "\t# exp = 174\n",
-    "\texp = 175\n",
+    "\texp = 176\n",
     "\n",
     "trainer = TrainerMCDropout(config, dataset, patchesHandler)\n",
     "\n",
