--- a/train_evidential.ipynb
+++ b/train_evidential.ipynb
@@ -8,7 +8,39 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "import tracemalloc\n",
+    "from collections import Counter\n",
+    "import linecache\n",
+    "import os\n",
+    "\n",
+    "def display_top(snapshot, key_type='lineno', limit=3):\n",
+    "    snapshot = snapshot.filter_traces((\n",
+    "        tracemalloc.Filter(False, \"<frozen importlib._bootstrap>\"),\n",
+    "        tracemalloc.Filter(False, \"<unknown>\"),\n",
+    "    ))\n",
+    "    top_stats = snapshot.statistics(key_type)\n",
+    "\n",
+    "    print(\"Top %s lines\" % limit)\n",
+    "    for index, stat in enumerate(top_stats[:limit], 1):\n",
+    "        frame = stat.traceback[0]\n",
+    "        # replace \"/path/to/module/file.py\" with \"module/file.py\"\n",
+    "        filename = os.sep.join(frame.filename.split(os.sep)[-2:])\n",
+    "        print(\"#%s: %s:%s: %.1f KiB\"\n",
+    "              % (index, filename, frame.lineno, stat.size / 1024))\n",
+    "        line = linecache.getline(frame.filename, frame.lineno).strip()\n",
+    "        if line:\n",
+    "            print('    %s' % line)\n",
+    "\n",
+    "    other = top_stats[limit:]\n",
+    "    if other:\n",
+    "        size = sum(stat.size for stat in other)\n",
+    "        print(\"%s other: %.1f KiB\" % (len(other), size / 1024))\n",
+    "    total = sum(stat.size for stat in top_stats)\n",
+    "    print(\"Total allocated size: %.1f KiB\" % (total / 1024))\n",
+    "\n",
+    "tracemalloc.start()\n"
    ]
   },
   {
@@ -3504,6 +3536,17 @@
    ],
    "source": [
     "trainer.getOptimalUncertaintyThreshold()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af373803",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot = tracemalloc.take_snapshot()\n",
+    "display_top(snapshot)"
    ]
   },
   {
