Add landsat loader. Before plotting 6 snippet images

--- a/train_evidential.ipynb
+++ b/train_evidential.ipynb
@@ -142,16 +142,19 @@
     "else:\n",
     "\tdates = [2019, 2020]\n",
     "'''\n",
-    "# dates = [2018, 2019]\n",
-    "# dates = [2017, 2018]\n",
+    "site = 'PA'\n",
+    "if site == 'PA':\n",
+    "\t# dates = [2018, 2019]\n",
+    "\tdates = [2017, 2018]\n",
     "\n",
-    "# dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
-    "# \taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
-    "# \tborderBuffer = 2)\t\n",
-    "dates = [2019, 2020]\n",
-    "dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
-    "\tborderBuffer = 2)\t\n",
+    "\tdataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "\t\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
+    "\t\tborderBuffer = 2)\t\n",
+    "elif site == 'MT':\n",
+    "\tdates = [2019, 2020]\n",
+    "\tdataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
+    "\t\tborderBuffer = 2)\t\n",
     "# dataset = MTDeforestationTime()\t\n",
     "# [2016, 2017, 2018]\n",
     "\n",
