OK grid execution evidentiail and ensemble. Before grid MC dropout sueo

--- a/train_grid_execution_early_date.ipynb
+++ b/train_grid_execution_early_date.ipynb
@@ -76,21 +76,35 @@
     "\n",
     "\n",
     "#dates = [2018, 2019]\n",
-    "'''\n",
-    "dates = [2017, 2018]\n",
     "\n",
-    "dataset = PAMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\taddPastDeforestationInput = True,\n",
-    "\tborderBuffer = 2)\t\n",
-    "'''\n",
+    "site = 'PA'\n",
+    "if site == 'PA':\n",
+    "\tdates = [2017, 2018]\n",
     "\n",
+    "\tdataset = PAMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\taddPastDeforestationInput = True,\n",
+    "\t\tborderBuffer = 2)\n",
+    "\t#exp_id_base = 148\n",
+    "\t# exp_id_base = 155\n",
+    "\texp_id_base = 194\n",
+    "\texp_id_base = 198\n",
+    "\texp_id_base = 214\n",
     "\n",
-    "dates = [2018, 2019]\n",
+    "\t# earlier date\n",
+    "\texp_id_base = 224\n",
+    "\t\t\n",
+    "else:\n",
+    "\tdates = [2018, 2019]\n",
     "\n",
-    "dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\taddPastDeforestationInput = True,\n",
-    "\tborderBuffer = 2)\t\n",
-    "\n",
+    "\tdataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\taddPastDeforestationInput = True,\n",
+    "\t\tborderBuffer = 2)\t\n",
+    "\t# MT\n",
+    "\t# exp_id_base = 196\n",
+    "\t# early date\n",
+    "\texp_id_base = 206\n",
+    "\t# early date inference\n",
+    "\texp_id_base = 210\n",
     "\n",
     "ic(dates)\n",
     "\n",
@@ -110,7 +124,7 @@
    "outputs": [],
    "source": [
     "repetition_n = 10\n",
-    "repetition_n = 6\n",
+    "# repetition_n = 6\n",
     "\n",
     "experiment_values = np.ones(repetition_n).astype(np.uint8)\n",
     "\n",
@@ -118,21 +132,8 @@
     "# experiment_values = [int(x) for x in experiment_values]\n",
     "results = []\n",
     "\n",
-    "#exp_id_base = 148\n",
-    "# exp_id_base = 155\n",
-    "exp_id_base = 194\n",
-    "exp_id_base = 198\n",
-    "exp_id_base = 214\n",
     "\n",
-    "# earlier date\n",
-    "exp_id_base = 224\n",
     "\n",
-    "# MT\n",
-    "# exp_id_base = 196\n",
-    "# early date\n",
-    "exp_id_base = 206\n",
-    "# early date inference\n",
-    "exp_id_base = 210\n",
     "\n",
     "exp_ids = range(exp_id_base, exp_id_base+len(experiment_values))\n",
     "\n",
@@ -240,20 +241,21 @@
    ],
    "source": [
     "\n",
-    "'''\n",
-    "dates = [2018, 2019]\n",
+    "if site == 'PA':\n",
     "\n",
-    "dataset = PAMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\taddPastDeforestationInput = True,\n",
-    "\tborderBuffer = 2)\t\n",
-    "'''\n",
+    "\tdates = [2018, 2019]\n",
     "\n",
+    "\tdataset = PAMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\taddPastDeforestationInput = True,\n",
+    "\t\tborderBuffer = 2)\t\n",
     "\n",
-    "dates = [2019, 2020]\n",
+    "else:\n",
     "\n",
-    "dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\taddPastDeforestationInput = True,\n",
-    "\tborderBuffer = 2)\t\n",
+    "\tdates = [2019, 2020]\n",
+    "\n",
+    "\tdataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\taddPastDeforestationInput = True,\n",
+    "\t\tborderBuffer = 2)\t\n",
     "\n",
     "\n",
     "ic(dates)\n",
