ok. before retrying single entropy on mcd w training=False

--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -50,7 +50,8 @@
     "# from src.dataset_legacy import MTDeforestationTime\n",
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates\n",
-    "from src.trainer.multioutput import TrainerMCDropout"
+    "from src.trainer.multioutput import TrainerMCDropout\n",
+    "from src.backend.Logger import Logger\n"
    ]
   },
   {
@@ -254,7 +255,8 @@
     "\t# exp = 174\n",
     "\texp = 176\n",
     "\n",
-    "trainer = TrainerMCDropout(config, dataset, patchesHandler)\n",
+    "logger = Logger()\n",
+    "trainer = TrainerMCDropout(config, dataset, patchesHandler, logger)\n",
     "\n",
     "trainer.defineExperiment(exp)\n"
    ]
