--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -2048,107 +2048,11 @@
     }
    ],
    "source": [
-    "'''\n",
+    "\n",
     "trainer.getOtherUncertaintyMetrics()\n",
     "print(trainer.sUEO)\n",
     "\n",
-    "print(trainer.ece_score)  \n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0feb9c3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def getUncertaintyAAValues(self):\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # self.threshold_list = [0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.25, 0.27, 0.3, 0.34, 0.36]\n",
-    "\n",
-    "    # self.threshold_list = [0.005, 0.0075, 0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.25, 0.27, 0.3, 0.34, 0.36, np.max(uncertainty)-0.003]\n",
-    "    if self.config['uncertainty_method'] == \"pred_entropy\":\n",
-    "            self.threshold_list = [0.0025, 0.005, 0.0075, 0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36, np.max(self.uncertainty)-0.003, np.max(self.uncertainty)-0.0015]\n",
-    "            self.threshold_list = [0.0025, 0.025, 0.05, 0.1, 0.2, 0.4, \n",
-    "                    0.5, 0.6, 0.7, 0.8, 0.9, np.max(self.uncertainty)-0.003, np.max(self.uncertainty)-0.0015]\n",
-    "            self.threshold_list = [0.025, 0.05, 0.1, 0.2, 0.4, \n",
-    "                    0.5, 0.6, 0.7, 0.8, 0.9, np.max(self.uncertainty)-0.003, np.max(self.uncertainty)-0.0015]\n",
-    "                        \n",
-    "    elif self.config['uncertainty_method'] == \"pred_var\":\n",
-    "            self.threshold_list = [0.0025, 0.005, 0.0075, 0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36]\n",
-    "            self.threshold_list = [x*0.13/0.36 for x in self.threshold_list] + [np.max(self.uncertainty)-0.0015, np.max(self.uncertainty)-0.0008]\n",
-    "    elif self.config['uncertainty_method'] == \"MI\":\n",
-    "            self.threshold_list = [0.0025, 0.005, 0.0075, 0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36]\n",
-    "            self.threshold_list = [x*0.235/0.36 for x in self.threshold_list] + [np.max(self.uncertainty)-0.003, np.max(self.uncertainty)-0.0015]\n",
-    "    elif self.config['uncertainty_method'] == \"KL\":\n",
-    "            self.threshold_list = [0.0025, 0.005, 0.0075, 0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36]\n",
-    "            self.threshold_list = [x*1.0/0.36 for x in self.threshold_list] + [np.max(self.uncertainty)-0.006, np.max(self.uncertainty)-0.003]\n",
-    "    elif self.config['uncertainty_method'] == \"evidential\":\n",
-    "            # self.threshold_list = [0.015, 0.03, 0.04]\n",
-    "            self.threshold_list = [0.0025, 0.005, 0.0075, 0.01, 0.015, 0.025, 0.05, 0.08, 0.1, 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36]\n",
-    "            self.threshold_list = [ 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36]\n",
-    "            self.threshold_list = [ 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36, 0.45, 0.55, 0.65, 0.8]\n",
-    "\n",
-    "            self.threshold_list = [0.13, 0.15, 0.2, 0.225, \n",
-    "                    0.25, 0.27, 0.3, 0.34, 0.36, 0.45, 0.55, 0.65, 0.8]\n",
-    "\n",
-    "            # self.threshold_list = [ 0.15, 0.2,  \n",
-    "            #          0.3, 0.35, 0.4, 0.5, 0.6, 0.7]\n",
-    "\n",
-    "            # self.threshold_list = [0.015,0.1, 0.2, 0.27, 0.36, 0.45, 0.55, 0.65]\n",
-    "\n",
-    "            # self.threshold_list = [x*1.0/0.36 for x in self.threshold_list] + [np.max(uncertainty)-0.006, np.max(uncertainty)-0.003]\n",
-    "                    \n",
-    "            # self.threshold_list = np.linspace(np.min(uncertainty) + 0.0015, np.max(uncertainty) - 0.0015, 19)\n",
-    "    print(self.threshold_list)\n",
-    "    self.loadThresholdMetrics = False\n",
-    "    if self.loadThresholdMetrics == False:\n",
-    "            # self.threshold_list = [0.1]\n",
-    "            # y_test\n",
-    "            ic(self.uncertainty.shape, self.label_mask_current_deforestation_test.shape)\n",
-    "\n",
-    "            metrics_values = _metrics.getAA_Recall(self.uncertainty, \n",
-    "                    self.label_mask_current_deforestation_test, \n",
-    "                    self.predicted_test, self.threshold_list)\n",
-    "\n",
-    "            # ic(metrics_values)\n",
-    "\n",
-    "\n",
-    "    self.m = {'precision_L': metrics_values[:,0],\n",
-    "            'recall_L': metrics_values[:,1],\n",
-    "            'recall_Ltotal': metrics_values[:,2],\n",
-    "            'AA': metrics_values[:,3],\n",
-    "            'precision_H': metrics_values[:,4],\n",
-    "            'recall_H': metrics_values[:,5],\n",
-    "            'UEO': metrics_values[:,6]}\n",
-    "\n",
-    "    self.m['f1_L'] = 2*self.m['precision_L']*self.m['recall_L']/(self.m['precision_L']+self.m['recall_L'])\n",
-    "    self.m['f1_H'] = 2*self.m['precision_H']*self.m['recall_H']/(self.m['precision_H']+self.m['recall_H'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb767435",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import types\n",
-    "\n",
-    "trainer.getUncertaintyAAValues = types.MethodType(getUncertaintyAAValues, trainer)\n",
-    "\n"
+    "print(trainer.ece_score)  \n"
    ]
   },
   {
