Refactor for readme 1

--- a/log_analyze.ipynb
+++ b/log_analyze.ipynb
@@ -89,6 +89,8 @@
     "\n",
     "filenames = ['log_mcd_pa_earlydate_classesmode_false.pkl']\n",
     "\n",
+    "filenames = ['log_single_run_pa_early_date_pred_entropy.pkl']\n",
+    "\n",
     "#filename_mcd = 'log_mcd_pa_earlydate_classesmode_false.pkl'\n",
     "results = []\n",
     "for filename in filenames:\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,19 +178,348 @@
       "idx: 0, other uncertainty metrics: {'sUEO': 0.6792476375987123, 'ece_score': 0.02474262809975081}\n",
       "f1: 79.74\n",
       "f1_L: [0.93417857], f1_H: [0.61181974], f1_audit: [0.96641623]\n",
-      "UEO [0.1252642]\n"
+      "UEO [0.1252642]\n",
+      "exp_id, 124\n",
+      "idx: 1, other uncertainty metrics: {'sUEO': 0.7225641932787457, 'ece_score': 0.015045479687261566}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.9369862], f1_H: [0.61191411], f1_audit: [0.96414766]\n",
+      "UEO [0.11659304]\n",
+      "exp_id, 125\n",
+      "idx: 2, other uncertainty metrics: {'sUEO': 0.7247701320854562, 'ece_score': 0.010928968421254523}\n",
+      "f1: 78.61\n",
+      "f1_L: [0.91803488], f1_H: [0.65431707], f1_audit: [0.96396784]\n",
+      "UEO [0.12936442]\n",
+      "exp_id, 126\n",
+      "idx: 3, other uncertainty metrics: {'sUEO': 0.6541180300152171, 'ece_score': 0.018214489098177546}\n",
+      "f1: 75.6\n",
+      "f1_L: [0.92199048], f1_H: [0.51719712], f1_audit: [0.96088701]\n",
+      "UEO [0.14380589]\n",
+      "exp_id, 127\n",
+      "idx: 4, other uncertainty metrics: {'sUEO': 0.6493025145432387, 'ece_score': 0.024259739468730758}\n",
+      "f1: 76.45\n",
+      "f1_L: [0.92738681], f1_H: [0.56811555], f1_audit: [0.96643949]\n",
+      "UEO [0.14242936]\n",
+      "exp_id, 128\n",
+      "idx: 5, other uncertainty metrics: {'sUEO': 0.7593926354855599, 'ece_score': 0.008921764247193601}\n",
+      "f1: 80.54\n",
+      "f1_L: [0.9249484], f1_H: [0.69785814], f1_audit: [0.96841562]\n",
+      "UEO [0.12109384]\n",
+      "exp_id, 129\n",
+      "idx: 6, other uncertainty metrics: {'sUEO': 0.5996586357865529, 'ece_score': 0.0290559145850349}\n",
+      "f1: 72.66\n",
+      "f1_L: [0.84276484], f1_H: [0.47605721], f1_audit: [0.90196277]\n",
+      "UEO [0.13151522]\n",
+      "exp_id, 131\n",
+      "idx: 7, other uncertainty metrics: {'sUEO': 0.7459717446602862, 'ece_score': 0.015370363186335253}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.94415884], f1_H: [0.6309086], f1_audit: [0.97093727]\n",
+      "UEO [0.1191757]\n",
+      "exp_id, 1122\n",
+      "idx: 8, other uncertainty metrics: {'sUEO': 0.754696443566349, 'ece_score': 0.010586139460431604}\n",
+      "f1: 81.34\n",
+      "f1_L: [0.92991181], f1_H: [0.70910348], f1_audit: [0.96998159]\n",
+      "UEO [0.1200706]\n",
+      "exp_id, 1121\n",
+      "idx: 9, other uncertainty metrics: {'sUEO': 0.7170674745728572, 'ece_score': 0.0110214317915386}\n",
+      "f1: 74.4\n",
+      "f1_L: [0.93220193], f1_H: [0.54936969], f1_audit: [0.96751662]\n",
+      "UEO [0.17902143]\n",
+      "exp_id, 123\n",
+      "idx: 0, other uncertainty metrics: {'sUEO': 0.6792476375987123, 'ece_score': 0.02474262809975081}\n",
+      "f1: 79.74\n",
+      "f1_L: [0.93417857], f1_H: [0.61181974], f1_audit: [0.96641623]\n",
+      "UEO [0.1252642]\n",
+      "exp_id, 124\n",
+      "idx: 1, other uncertainty metrics: {'sUEO': 0.7225641932787457, 'ece_score': 0.015045479687261566}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.9369862], f1_H: [0.61191411], f1_audit: [0.96414766]\n",
+      "UEO [0.11659304]\n",
+      "exp_id, 125\n",
+      "idx: 2, other uncertainty metrics: {'sUEO': 0.7247701320854562, 'ece_score': 0.010928968421254523}\n",
+      "f1: 78.61\n",
+      "f1_L: [0.91803488], f1_H: [0.65431707], f1_audit: [0.96396784]\n",
+      "UEO [0.12936442]\n",
+      "exp_id, 126\n",
+      "idx: 3, other uncertainty metrics: {'sUEO': 0.6541180300152171, 'ece_score': 0.018214489098177546}\n",
+      "f1: 75.6\n",
+      "f1_L: [0.92199048], f1_H: [0.51719712], f1_audit: [0.96088701]\n",
+      "UEO [0.14380589]\n",
+      "exp_id, 127\n",
+      "idx: 4, other uncertainty metrics: {'sUEO': 0.6493025145432387, 'ece_score': 0.024259739468730758}\n",
+      "f1: 76.45\n",
+      "f1_L: [0.92738681], f1_H: [0.56811555], f1_audit: [0.96643949]\n",
+      "UEO [0.14242936]\n",
+      "exp_id, 128\n",
+      "idx: 5, other uncertainty metrics: {'sUEO': 0.7593926354855599, 'ece_score': 0.008921764247193601}\n",
+      "f1: 80.54\n",
+      "f1_L: [0.9249484], f1_H: [0.69785814], f1_audit: [0.96841562]\n",
+      "UEO [0.12109384]\n",
+      "exp_id, 129\n",
+      "idx: 6, other uncertainty metrics: {'sUEO': 0.5996586357865529, 'ece_score': 0.0290559145850349}\n",
+      "f1: 72.66\n",
+      "f1_L: [0.84276484], f1_H: [0.47605721], f1_audit: [0.90196277]\n",
+      "UEO [0.13151522]\n",
+      "exp_id, 131\n",
+      "idx: 7, other uncertainty metrics: {'sUEO': 0.7459717446602862, 'ece_score': 0.015370363186335253}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.94415884], f1_H: [0.6309086], f1_audit: [0.97093727]\n",
+      "UEO [0.1191757]\n",
+      "exp_id, 1122\n",
+      "idx: 8, other uncertainty metrics: {'sUEO': 0.754696443566349, 'ece_score': 0.010586139460431604}\n",
+      "f1: 81.34\n",
+      "f1_L: [0.92991181], f1_H: [0.70910348], f1_audit: [0.96998159]\n",
+      "UEO [0.1200706]\n",
+      "exp_id, 1121\n",
+      "idx: 9, other uncertainty metrics: {'sUEO': 0.7170674745728572, 'ece_score': 0.0110214317915386}\n",
+      "f1: 74.4\n",
+      "f1_L: [0.93220193], f1_H: [0.54936969], f1_audit: [0.96751662]\n",
+      "UEO [0.17902143]\n",
+      "exp_id, 123\n",
+      "idx: 0, other uncertainty metrics: {'sUEO': 0.6792476375987123, 'ece_score': 0.02474262809975081}\n",
+      "f1: 79.74\n",
+      "f1_L: [0.93417857], f1_H: [0.61181974], f1_audit: [0.96641623]\n",
+      "UEO [0.1252642]\n",
+      "exp_id, 124\n",
+      "idx: 1, other uncertainty metrics: {'sUEO': 0.7225641932787457, 'ece_score': 0.015045479687261566}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.9369862], f1_H: [0.61191411], f1_audit: [0.96414766]\n",
+      "UEO [0.11659304]\n",
+      "exp_id, 125\n",
+      "idx: 2, other uncertainty metrics: {'sUEO': 0.7247701320854562, 'ece_score': 0.010928968421254523}\n",
+      "f1: 78.61\n",
+      "f1_L: [0.91803488], f1_H: [0.65431707], f1_audit: [0.96396784]\n",
+      "UEO [0.12936442]\n",
+      "exp_id, 126\n",
+      "idx: 3, other uncertainty metrics: {'sUEO': 0.6541180300152171, 'ece_score': 0.018214489098177546}\n",
+      "f1: 75.6\n",
+      "f1_L: [0.92199048], f1_H: [0.51719712], f1_audit: [0.96088701]\n",
+      "UEO [0.14380589]\n",
+      "exp_id, 127\n",
+      "idx: 4, other uncertainty metrics: {'sUEO': 0.6493025145432387, 'ece_score': 0.024259739468730758}\n",
+      "f1: 76.45\n",
+      "f1_L: [0.92738681], f1_H: [0.56811555], f1_audit: [0.96643949]\n",
+      "UEO [0.14242936]\n",
+      "exp_id, 128\n",
+      "idx: 5, other uncertainty metrics: {'sUEO': 0.7593926354855599, 'ece_score': 0.008921764247193601}\n",
+      "f1: 80.54\n",
+      "f1_L: [0.9249484], f1_H: [0.69785814], f1_audit: [0.96841562]\n",
+      "UEO [0.12109384]\n",
+      "exp_id, 129\n",
+      "idx: 6, other uncertainty metrics: {'sUEO': 0.5996586357865529, 'ece_score': 0.0290559145850349}\n",
+      "f1: 72.66\n",
+      "f1_L: [0.84276484], f1_H: [0.47605721], f1_audit: [0.90196277]\n",
+      "UEO [0.13151522]\n",
+      "exp_id, 131\n",
+      "idx: 7, other uncertainty metrics: {'sUEO': 0.7459717446602862, 'ece_score': 0.015370363186335253}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.94415884], f1_H: [0.6309086], f1_audit: [0.97093727]\n",
+      "UEO [0.1191757]\n",
+      "exp_id, 1122\n",
+      "idx: 8, other uncertainty metrics: {'sUEO': 0.754696443566349, 'ece_score': 0.010586139460431604}\n",
+      "f1: 81.34\n",
+      "f1_L: [0.92991181], f1_H: [0.70910348], f1_audit: [0.96998159]\n",
+      "UEO [0.1200706]\n",
+      "exp_id, 1121\n",
+      "idx: 9, other uncertainty metrics: {'sUEO': 0.7170674745728572, 'ece_score': 0.0110214317915386}\n",
+      "f1: 74.4\n",
+      "f1_L: [0.93220193], f1_H: [0.54936969], f1_audit: [0.96751662]\n",
+      "UEO [0.17902143]\n",
+      "exp_id, 123\n",
+      "idx: 0, other uncertainty metrics: {'sUEO': 0.6792476375987123, 'ece_score': 0.02474262809975081}\n",
+      "f1: 79.74\n",
+      "f1_L: [0.93417857], f1_H: [0.61181974], f1_audit: [0.96641623]\n",
+      "UEO [0.1252642]\n",
+      "exp_id, 124\n",
+      "idx: 1, other uncertainty metrics: {'sUEO': 0.7225641932787457, 'ece_score': 0.015045479687261566}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.9369862], f1_H: [0.61191411], f1_audit: [0.96414766]\n",
+      "UEO [0.11659304]\n",
+      "exp_id, 125\n",
+      "idx: 2, other uncertainty metrics: {'sUEO': 0.7247701320854562, 'ece_score': 0.010928968421254523}\n",
+      "f1: 78.61\n",
+      "f1_L: [0.91803488], f1_H: [0.65431707], f1_audit: [0.96396784]\n",
+      "UEO [0.12936442]\n",
+      "exp_id, 126\n",
+      "idx: 3, other uncertainty metrics: {'sUEO': 0.6541180300152171, 'ece_score': 0.018214489098177546}\n",
+      "f1: 75.6\n",
+      "f1_L: [0.92199048], f1_H: [0.51719712], f1_audit: [0.96088701]\n",
+      "UEO [0.14380589]\n",
+      "exp_id, 127\n",
+      "idx: 4, other uncertainty metrics: {'sUEO': 0.6493025145432387, 'ece_score': 0.024259739468730758}\n",
+      "f1: 76.45\n",
+      "f1_L: [0.92738681], f1_H: [0.56811555], f1_audit: [0.96643949]\n",
+      "UEO [0.14242936]\n",
+      "exp_id, 128\n",
+      "idx: 5, other uncertainty metrics: {'sUEO': 0.7593926354855599, 'ece_score': 0.008921764247193601}\n",
+      "f1: 80.54\n",
+      "f1_L: [0.9249484], f1_H: [0.69785814], f1_audit: [0.96841562]\n",
+      "UEO [0.12109384]\n",
+      "exp_id, 129\n",
+      "idx: 6, other uncertainty metrics: {'sUEO': 0.5996586357865529, 'ece_score': 0.0290559145850349}\n",
+      "f1: 72.66\n",
+      "f1_L: [0.84276484], f1_H: [0.47605721], f1_audit: [0.90196277]\n",
+      "UEO [0.13151522]\n",
+      "exp_id, 131\n",
+      "idx: 7, other uncertainty metrics: {'sUEO': 0.7459717446602862, 'ece_score': 0.015370363186335253}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.94415884], f1_H: [0.6309086], f1_audit: [0.97093727]\n",
+      "UEO [0.1191757]\n",
+      "exp_id, 1122\n",
+      "idx: 8, other uncertainty metrics: {'sUEO': 0.754696443566349, 'ece_score': 0.010586139460431604}\n",
+      "f1: 81.34\n",
+      "f1_L: [0.92991181], f1_H: [0.70910348], f1_audit: [0.96998159]\n",
+      "UEO [0.1200706]\n",
+      "exp_id, 1121\n",
+      "idx: 9, other uncertainty metrics: {'sUEO': 0.7170674745728572, 'ece_score': 0.0110214317915386}\n",
+      "f1: 74.4\n",
+      "f1_L: [0.93220193], f1_H: [0.54936969], f1_audit: [0.96751662]\n",
+      "UEO [0.17902143]\n",
+      "exp_id, 123\n",
+      "idx: 0, other uncertainty metrics: {'sUEO': 0.6792476375987123, 'ece_score': 0.02474262809975081}\n",
+      "f1: 79.74\n",
+      "f1_L: [0.93417857], f1_H: [0.61181974], f1_audit: [0.96641623]\n",
+      "UEO [0.1252642]\n",
+      "exp_id, 124\n",
+      "idx: 1, other uncertainty metrics: {'sUEO': 0.7225641932787457, 'ece_score': 0.015045479687261566}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.9369862], f1_H: [0.61191411], f1_audit: [0.96414766]\n",
+      "UEO [0.11659304]\n",
+      "exp_id, 125\n",
+      "idx: 2, other uncertainty metrics: {'sUEO': 0.7247701320854562, 'ece_score': 0.010928968421254523}\n",
+      "f1: 78.61\n",
+      "f1_L: [0.91803488], f1_H: [0.65431707], f1_audit: [0.96396784]\n",
+      "UEO [0.12936442]\n",
+      "exp_id, 126\n",
+      "idx: 3, other uncertainty metrics: {'sUEO': 0.6541180300152171, 'ece_score': 0.018214489098177546}\n",
+      "f1: 75.6\n",
+      "f1_L: [0.92199048], f1_H: [0.51719712], f1_audit: [0.96088701]\n",
+      "UEO [0.14380589]\n",
+      "exp_id, 127\n",
+      "idx: 4, other uncertainty metrics: {'sUEO': 0.6493025145432387, 'ece_score': 0.024259739468730758}\n",
+      "f1: 76.45\n",
+      "f1_L: [0.92738681], f1_H: [0.56811555], f1_audit: [0.96643949]\n",
+      "UEO [0.14242936]\n",
+      "exp_id, 128\n",
+      "idx: 5, other uncertainty metrics: {'sUEO': 0.7593926354855599, 'ece_score': 0.008921764247193601}\n",
+      "f1: 80.54\n",
+      "f1_L: [0.9249484], f1_H: [0.69785814], f1_audit: [0.96841562]\n",
+      "UEO [0.12109384]\n",
+      "exp_id, 129\n",
+      "idx: 6, other uncertainty metrics: {'sUEO': 0.5996586357865529, 'ece_score': 0.0290559145850349}\n",
+      "f1: 72.66\n",
+      "f1_L: [0.84276484], f1_H: [0.47605721], f1_audit: [0.90196277]\n",
+      "UEO [0.13151522]\n",
+      "exp_id, 131\n",
+      "idx: 7, other uncertainty metrics: {'sUEO': 0.7459717446602862, 'ece_score': 0.015370363186335253}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.94415884], f1_H: [0.6309086], f1_audit: [0.97093727]\n",
+      "UEO [0.1191757]\n",
+      "exp_id, 1122\n",
+      "idx: 8, other uncertainty metrics: {'sUEO': 0.754696443566349, 'ece_score': 0.010586139460431604}\n",
+      "f1: 81.34\n",
+      "f1_L: [0.92991181], f1_H: [0.70910348], f1_audit: [0.96998159]\n",
+      "UEO [0.1200706]\n",
+      "exp_id, 1121\n",
+      "idx: 9, other uncertainty metrics: {'sUEO': 0.7170674745728572, 'ece_score': 0.0110214317915386}\n",
+      "f1: 74.4\n",
+      "f1_L: [0.93220193], f1_H: [0.54936969], f1_audit: [0.96751662]\n",
+      "UEO [0.17902143]\n",
+      "exp_id, 123\n",
+      "idx: 0, other uncertainty metrics: {'sUEO': 0.6792476375987123, 'ece_score': 0.02474262809975081}\n",
+      "f1: 79.74\n",
+      "f1_L: [0.93417857], f1_H: [0.61181974], f1_audit: [0.96641623]\n",
+      "UEO [0.1252642]\n",
+      "exp_id, 124\n",
+      "idx: 1, other uncertainty metrics: {'sUEO': 0.7225641932787457, 'ece_score': 0.015045479687261566}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.9369862], f1_H: [0.61191411], f1_audit: [0.96414766]\n",
+      "UEO [0.11659304]\n",
+      "exp_id, 125\n",
+      "idx: 2, other uncertainty metrics: {'sUEO': 0.7247701320854562, 'ece_score': 0.010928968421254523}\n",
+      "f1: 78.61\n",
+      "f1_L: [0.91803488], f1_H: [0.65431707], f1_audit: [0.96396784]\n",
+      "UEO [0.12936442]\n",
+      "exp_id, 126\n",
+      "idx: 3, other uncertainty metrics: {'sUEO': 0.6541180300152171, 'ece_score': 0.018214489098177546}\n",
+      "f1: 75.6\n",
+      "f1_L: [0.92199048], f1_H: [0.51719712], f1_audit: [0.96088701]\n",
+      "UEO [0.14380589]\n",
+      "exp_id, 127\n",
+      "idx: 4, other uncertainty metrics: {'sUEO': 0.6493025145432387, 'ece_score': 0.024259739468730758}\n",
+      "f1: 76.45\n",
+      "f1_L: [0.92738681], f1_H: [0.56811555], f1_audit: [0.96643949]\n",
+      "UEO [0.14242936]\n",
+      "exp_id, 128\n",
+      "idx: 5, other uncertainty metrics: {'sUEO': 0.7593926354855599, 'ece_score': 0.008921764247193601}\n",
+      "f1: 80.54\n",
+      "f1_L: [0.9249484], f1_H: [0.69785814], f1_audit: [0.96841562]\n",
+      "UEO [0.12109384]\n",
+      "exp_id, 129\n",
+      "idx: 6, other uncertainty metrics: {'sUEO': 0.5996586357865529, 'ece_score': 0.0290559145850349}\n",
+      "f1: 72.66\n",
+      "f1_L: [0.84276484], f1_H: [0.47605721], f1_audit: [0.90196277]\n",
+      "UEO [0.13151522]\n",
+      "exp_id, 131\n",
+      "idx: 7, other uncertainty metrics: {'sUEO': 0.7459717446602862, 'ece_score': 0.015370363186335253}\n",
+      "f1: 81.38\n",
+      "f1_L: [0.94415884], f1_H: [0.6309086], f1_audit: [0.97093727]\n",
+      "UEO [0.1191757]\n",
+      "exp_id, 1122\n",
+      "idx: 8, other uncertainty metrics: {'sUEO': 0.754696443566349, 'ece_score': 0.010586139460431604}\n",
+      "f1: 81.34\n",
+      "f1_L: [0.92991181], f1_H: [0.70910348], f1_audit: [0.96998159]\n",
+      "UEO [0.1200706]\n",
+      "exp_id, 1121\n",
+      "idx: 9, other uncertainty metrics: {'sUEO': 0.7170674745728572, 'ece_score': 0.0110214317915386}\n",
+      "f1: 74.4\n",
+      "f1_L: [0.93220193], f1_H: [0.54936969], f1_audit: [0.96751662]\n",
+      "UEO [0.17902143]\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'alpha'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32md:\\Jorge\\deforestation_uncertainty\\log_analyze.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mUEO\u001b[39m\u001b[39m\"\u001b[39m,result[\u001b[39m'\u001b[39m\u001b[39muncertainty_result\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mmetrics\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mUEO\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# plt.figure()\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/log_analyze.ipynb#W4sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m getMassFcn2D(result[\u001b[39m'\u001b[39;49m\u001b[39msnippet_poi_results\u001b[39;49m\u001b[39m'\u001b[39;49m][poi_id][\u001b[39m'\u001b[39;49m\u001b[39malpha\u001b[39;49m\u001b[39m'\u001b[39;49m], normalize_pvals\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'alpha'"
-     ]
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
