--- a/train_evidential.ipynb
+++ b/train_evidential.ipynb
@@ -129,7 +129,8 @@
     "\t},\n",
     "\t\"uncertainty_method\": uncertaintyMethod,\n",
     "\t\"evidence_function\": evidential.relu_evidence,\n",
-    "#\t\"loss\": evidential.loss_evidential_dice\n",
+    "\t\"site\": \"PA\",\n",
+    "\t\"training_date\": \"earlier\" # values: earlier, current\n",
     "}\n",
     "\n",
     "# config[\"loss\"] = config[\"loss\"](config[\"weights\"])\n",
@@ -143,21 +144,25 @@
     "else:\n",
     "\tdates = [2019, 2020]\n",
     "'''\n",
-    "site = 'PA'\n",
-    "if site == 'PA':\n",
-    "\tdates = [2018, 2019]\n",
-    "\t# dates = [2017, 2018]\n",
+    "config['site'] = 'PA'\n",
+    "if config['site'] == 'PA':\n",
+    "\tif config['training'] == True and config['training_date'] == 'earlier':\n",
+    "\t\tdates = [2017, 2018]\n",
+    "\telse:\n",
+    "\t\tdates = [2018, 2019]\n",
     "\n",
-    "\tdataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
+    "\tdataset = PAMultipleDates(dates = dates, \n",
     "\t\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
     "\t\tborderBuffer = 2)\t\n",
-    "elif site == 'MT':\n",
-    "\tdates = [2019, 2020]\n",
+    "elif config['site'] == 'MT':\n",
+    "\tif config['training'] == True and config['training_date'] == 'earlier':\n",
+    "\t\tdates = [2018, 2019]\n",
+    "\telse:\n",
+    "\t\tdates = [2019, 2020]\n",
+    "\n",
     "\tdataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
     "\t\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
     "\t\tborderBuffer = 2)\t\n",
-    "# dataset = MTDeforestationTime()\t\n",
-    "# [2016, 2017, 2018]\n",
     "\n",
     "ic(dates)\n",
     "\n",
@@ -180,8 +185,6 @@
     "\n",
     "exp = 234\n",
     "\n",
-    "# if config[\"training\"] == True:\n",
-    "# trainer = TrainerEvidentialUEO(config, dataset, patchesHandler)\n",
     "logger = Logger()\n",
     "trainer = TrainerEvidential(config, dataset, patchesHandler, logger)\n",
     "\n",
