--- a/train_mc_dropout.ipynb
+++ b/train_mc_dropout.ipynb
@@ -117,33 +117,30 @@
     "\t\"removePolygons\": True,\n",
     "\t\"uncertainty_method\": uncertaintyMethod,\n",
     "\t\"classes_mode\": False,\n",
-    "\t\"learning_rate\": 1e-4\n",
+    "\t\"learning_rate\": 1e-4,\n",
+    "\t\"site\": \"MT\",\n",
+    "\t\"training_date\": \"earlier\" # values: earlier, current\n",
     "}\n",
     "print(config)\n",
     "\n",
-    "'''\n",
-    "if training == True:\n",
-    "\tdates = [2017, 2018]\n",
-    "else:\n",
-    "\tdates = [2018, 2019]\n",
-    "if training == True:\n",
-    "\tdates = [2018, 2019]\n",
-    "else:\n",
-    "\tdates = [2019, 2020]\n",
-    "'''\n",
-    "# dates = [2020, 2021]\n",
-    "# dataset = MAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
-    "# \taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
-    "# \tborderBuffer = 2)\t\n",
+    "if config['site'] == 'PA':\n",
+    "\tif config['training'] == True and config['training_date'] == 'earlier':\n",
+    "\t\tdates = [2017, 2018]\n",
+    "\telse:\n",
+    "\t\tdates = [2018, 2019]\n",
     "\n",
-    "dates = [2018, 2019]\n",
-    "dataset = PAMultipleDates(dates = dates, # dates = [2017, 2018, 2019]. [2018, 2019]. [2015, 2016, 2017, 2018]\n",
-    "\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
-    "\tborderBuffer = 2)\t\n",
-    "# dates = [2019, 2020]\n",
-    "# dataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
-    "#  \taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
-    "# \tborderBuffer = 2)\t\n",
+    "\tdataset = PAMultipleDates(dates = dates, \n",
+    "\t\taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
+    "\t\tborderBuffer = 2)\t\n",
+    "elif config['site'] == 'MT':\n",
+    "\tif config['training'] == True and config['training_date'] == 'earlier':\n",
+    "\t\tdates = [2018, 2019]\n",
+    "\telse:\n",
+    "\t\tdates = [2019, 2020]\n",
+    "\n",
+    "\tdataset = MTMultipleDates(dates = dates, \n",
+    "\t \taddPastDeforestationInput = config['addPastDeforestationInput'],\n",
+    "\t\tborderBuffer = 2)\t\n",
     "\n",
     "if issubclass(type(dataset), MultipleDates):\n",
     "\tpatchesHandler = PatchesHandlerMultipleDates(\n",
@@ -159,44 +156,18 @@
     "\tif type(dataset) == PAMultipleDates:\n",
     "\n",
     "\n",
-    "\n",
-    "\t\texp = 103\n",
-    "\n",
-    "\n",
-    "\t\t# train 2017-2018\n",
-    "\t\t# exp = 138\n",
-    "\t\t# exp = 140\n",
-    "\t\t# exp = 147\n",
+    "\t\tif config['training_date'] == 'current': exp = 103\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 124\n",
+    "\t\t \n",
     "\tif type(dataset) == MTMultipleDates:\n",
-    "\t\texp = 73 # train 2018-2019\n",
-    "\t\t# exp = 74 # train 2016-2019\n",
-    "\t\t# exp = 75 # train 2017-2019\n",
     "\t\t\n",
-    "\t\texp = 78 # 2019-2020\n",
-    "\n",
-    "\t\t# exp = 88 adds project past deforestation to label\n",
-    "\t\texp = 89 # ok label. so so result\n",
-    "\t\t\n",
-    "\t\texp = 91 # ok label. Good result. 81.8 F1. train 2019-2020\n",
-    "\t\texp = 95 # train 2018-2019\n",
-    "\t\texp = 100 # train 2017-2019\n",
-    "\t\texp = 101 # train 2016-2019\n",
-    "\t\texp = 102 # train 2016-2019\n",
-    "\t\t\n",
-    "\t\t# train 2018-2019\n",
-    "\t\texp = 137\n",
-    "\n",
-    "\t\texp = 117\n",
-    "\t\texp = 113\n",
-    "\t\texp = 110\n",
-    "\t\texp = 112\n",
-    "\t\texp = 116\n",
+    "\t\tif config['training_date'] == 'current': exp = 116\n",
+    "\t\telif config['training_date'] == 'earlier': exp = 137\t\t\n",
     "\n",
     "\tif type(dataset) == MAMultipleDates:\n",
     "\t\texp = 146\t\t\n",
     "else:\n",
-    "\t# exp = 13 # Multiple dates. using fixed fixed past deforestation distance\n",
-    "\t# exp = 174\n",
+    "\n",
     "\texp = 176\n",
     "\n",
     "logger = Logger()\n",
